# ostc4

./: .gitignore  .project  CMakeLists.txt  authors.txt  bootstrap.bat  import_from_hg.sh
Common/: CPU1-F429.ld
Common/Inc/: configuration.h  data_central.h  data_exchange.h  decom.h  global_constants.h  settings.h
Common/Src/: decom.c
Current build/: readme.txt
Discovery/Inc/: base.h  check_warning.h  configuration.h  crcmodel.h  data_exchange_main.h  simulation.h  t3.h  t7.h  tHome.h  tInfo.h  tInfoSensor.h  tMenu.h  tMenuEdit.h  tMenuEditGasOC.h  tMenuEditSetpoint.h  tMenuEditXtra.h  tMenuSetpoint.h  tStructure.h  text_multilanguage.h  timer.h
Discovery/Src/: base.c  check_warning.c  data_central.c  data_exchange_main.c  externCPU2bootloader.c  gfx_engine.c  logbook.c  settings.c  show_logbook.c  simulation.c  t3.c  t7.c  tCCR.c  tComm.c  tHome.c  tInfo.c  tInfoSensor.c  tMenu.c  tMenuCustom.c  tMenuDeco.c  tMenuEdit.c  tMenuEditCustom.c  tMenuEditDeco.c  tMenuEditGasOC.c  tMenuEditHardware.c  tMenuEditPlanner.c  tMenuEditSetpoint.c  tMenuEditSystem.c  tMenuEditXtra.c  tMenuGas.c  tMenuHardware.c  tMenuPlanner.c  tMenuSetpoint.c  tMenuSystem.c  tMenuXtra.c  test_vpm.c  text_multilanguage.c  timer.c
Documentations/: gfx_codes.txt
FontPack/: base_upperRegion.c  startup_stm32f429xx.s
RefPrj/Firmware/: .cproject  .project
RefPrj/Firmware/.externalToolBuilders/: Package firmware only.launch
RefPrj/FontPack/: .cproject  .project
RefPrj/FontPack/.externalToolBuilders/: Package all.launch
RefPrj/RTE/: .cproject  .project
RefPrj/RTE/.externalToolBuilders/: Package firmware and RTE (no fonts).launch
Small_CPU/Inc/: batteryCharger.h  batteryGasGauge.h  externalInterface.h  scheduler.h  uart.h  uartProtocol_Co2.h  uartProtocol_O2.h
Small_CPU/Src/: baseCPU2.c  batteryCharger.c  batteryGasGauge.c  dma.c  externalInterface.c  pressure.c  scheduler.c  spi.c  stm32f4xx_hal_msp_v3.c  stm32f4xx_it_v3.c  uart.c  uartProtocol_Co2.c  uartProtocol_O2.c
cmake/: arm-bare-metal.cmake
ostc4pack/: create_full_update_bin.sh
ostc4pack/src/: OSTC4pack_V4.cpp  checksum_final_add_fletcher.cpp
